[package]
name = "cargo-download"
version = "0.1.0"
description = "Cargo subcommand for downloading crate sources"
authors = ["Karol Kuczmarski <karol.kuczmarski@gmail.com>"]
keywords = ["cargo", "subcommand", "download", "fetch"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/Xion/cargo-download.git"
categories = ["development-tools", "development-tools:cargo-plugins"]

[[bin]]
name = "cargo-download"

[dependencies]
clap = "2.26.0"
