[package]
name = "cargo-download"
version = "0.1.0"
description = "Cargo subcommand for downloading crate sources"
authors = ["Karol Kuczmarski <karol.kuczmarski@gmail.com>"]
keywords = ["cargo", "subcommand", "download", "fetch"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/Xion/cargo-download.git"
categories = ["development-tools", "development-tools:cargo-plugins"]

[[bin]]
name = "cargo-download"

[dependencies]
ansi_term = "0.9"
clap = "2.26.0"
conv = "0.3"
derive-error = "0.0.3"
enum_derive = "*"
exitcode = "1.0"
isatty = "0.1.1"
itertools = "0.6"
lazy_static = "*"
log = "*"
maplit = "0.1"
reqwest = "0.8"
serde_json = "1.0"
slog = "1.5.2"
slog-envlogger = "0.5"
slog-stdlog = "1.1"
slog-stream = "1.2"
time = "0.1"
